# bevy_sparse_tilemap

./: Cargo.toml  README.md
examples/: hexagon.rs  square.rs
src/hex/: map_chunk_layer.rs  map_data.rs  mod.rs
src/map/: mod.rs
src/map/chunk/: chunk_cell.rs  chunk_pos.rs  mod.rs
src/square/: map_chunk_layer.rs  map_data.rs
src/tilemap_builder/: mod.rs
src/tilemap_manager/: errors.rs  manager.rs  mod.rs
