[package]
name = "bevy_sparse_tilemap"
description = "A Tilemap crate for the Bevy game engine with a focus on large map sizes and ECS sparse maps"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Noah Shomette <git@noahshomette.me>"]
repository = "https://github.com/NoahShomette/bevy_sparse_tilemap"
homepage = "https://github.com/NoahShomette/bevy_sparse_tilemap"

[workspace]
members = ["crates/bst_map_layer_derive"]
resolver = "2"

[features]
default = ["serde", "lettuces/bevy", "hex", "square"]
serde = ["dep:serde", "serde/default", "bevy/serialize", "lettuces/serde"]
reflect = ["lettuces/bevy_reflect"]
hex = []
square = []

[badges]
maintenance = { status = "actively-developed" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.15.0-rc.3", default-features = false, features = [] }
bst_map_layer_derive = { version = "0.1.0" }
# thiserror = "2.0.1"
thiserror = "1.0.44"
lettuces = { git = "https://github.com/richchurcher/lettuces", branch = "0.15" }

# Optional feature based dependencies
serde = { version = "1.0.214", optional = true }

[dev-dependencies]
bevy = { version = "0.15.0-rc.3" }
rand = { version = "0.8.5" }
serde = "1.0.214"
ron = "0.8.1"
